hphp/hack/test/typecheck/anon_scope_bug.php.exp
File "anon_scope_bug.php", line 6, characters 5-6:
Variable $x is undefined, or not always defined (Naming[2050])
